fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,11 @@ img {
   display: grid;
   grid-template-columns: 1fr;
 }
+
+.description {
+    min-height: 7rem;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns:repeat(2,1fr);
